{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 16,
  "lineage": "f8cd211f-4287-5f19-29df-1e1eb3088036",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "roboshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:121973526213:instance/i-038d4a42cba4f5088",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038d4a42cba4f5088",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ac3f10239df32d9b"
              }
            ],
            "primary_network_interface_id": "eni-0ac3f10239df32d9b",
            "private_dns": "ip-172-31-20-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.37",
            "public_dns": "ec2-54-221-33-239.compute-1.amazonaws.com",
            "public_ip": "54.221.33.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fef58b364a8e0656",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "roboshop-{var.environment}-common}",
              "roboshop-{var.environment}-mongodb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d3b02a3bb9ce44c",
            "tags": {
              "Name": "roboshop-{var.environment}-mongodb"
            },
            "tags_all": {
              "Name": "roboshop-{var.environment}-mongodb"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af21621d06a68b5e",
              "sg-0dcf3d0d3757cca8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "i-038d4a42cba4f5088",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_security_group.roboshop"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:121973526213:instance/i-0f9e01fc35272e2b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9e01fc35272e2b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fdfad0c9089c0844"
              }
            ],
            "primary_network_interface_id": "eni-0fdfad0c9089c0844",
            "private_dns": "ip-172-31-21-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.199",
            "public_dns": "ec2-18-206-212-112.compute-1.amazonaws.com",
            "public_ip": "18.206.212.112",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b42230d484e48497",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "roboshop-{var.environment}-common}",
              "roboshop-{var.environment}-redis"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d3b02a3bb9ce44c",
            "tags": {
              "Name": "roboshop-{var.environment}-redis"
            },
            "tags_all": {
              "Name": "roboshop-{var.environment}-redis"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018f8a7627d5520d4",
              "sg-0dcf3d0d3757cca8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "i-0f9e01fc35272e2b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_security_group.roboshop"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:121973526213:instance/i-05b4e22d40d2f236c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b4e22d40d2f236c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bff965deef5b22c2"
              }
            ],
            "primary_network_interface_id": "eni-0bff965deef5b22c2",
            "private_dns": "ip-172-31-23-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.241",
            "public_dns": "ec2-54-221-80-108.compute-1.amazonaws.com",
            "public_ip": "54.221.80.108",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0505469b5ffbd392c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "roboshop-{var.environment}-common}",
              "roboshop-{var.environment}-mysql"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d3b02a3bb9ce44c",
            "tags": {
              "Name": "roboshop-{var.environment}-mysql"
            },
            "tags_all": {
              "Name": "roboshop-{var.environment}-mysql"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb7771cd8563303a",
              "sg-0dcf3d0d3757cca8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "i-05b4e22d40d2f236c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_security_group.roboshop"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0220d79f3f480ecf5",
            "arn": "arn:aws:ec2:us-east-1:121973526213:instance/i-057be73db63ed4a3a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057be73db63ed4a3a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c8f0dd42860f4a6b"
              }
            ],
            "primary_network_interface_id": "eni-0c8f0dd42860f4a6b",
            "private_dns": "ip-172-31-24-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.87",
            "public_dns": "ec2-54-196-197-120.compute-1.amazonaws.com",
            "public_ip": "54.196.197.120",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05c10a77c995bf4aa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "roboshop-{var.environment}-common}",
              "roboshop-{var.environment}-rabbitmq"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d3b02a3bb9ce44c",
            "tags": {
              "Name": "roboshop-{var.environment}-rabbitmq"
            },
            "tags_all": {
              "Name": "roboshop-{var.environment}-rabbitmq"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0444620812f820476",
              "sg-0dcf3d0d3757cca8a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "i-057be73db63ed4a3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.common",
            "aws_security_group.roboshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121973526213:security-group/sg-0dcf3d0d3757cca8a",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcf3d0d3757cca8a",
            "ingress": [],
            "name": "roboshop-{var.environment}-common}",
            "name_prefix": "",
            "owner_id": "121973526213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop-{var.environment}-common}"
            },
            "tags_all": {
              "Name": "roboshop-{var.environment}-common}"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf34dfacd74cd95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "sg-0dcf3d0d3757cca8a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roboshop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121973526213:security-group/sg-0af21621d06a68b5e",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af21621d06a68b5e",
            "ingress": [],
            "name": "roboshop-{var.environment}-mongodb",
            "name_prefix": "",
            "owner_id": "121973526213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop-dev-mongodb"
            },
            "tags_all": {
              "Name": "roboshop-dev-mongodb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf34dfacd74cd95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "sg-0af21621d06a68b5e",
            "region": "us-east-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121973526213:security-group/sg-018f8a7627d5520d4",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018f8a7627d5520d4",
            "ingress": [],
            "name": "roboshop-{var.environment}-redis",
            "name_prefix": "",
            "owner_id": "121973526213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop-dev-redis"
            },
            "tags_all": {
              "Name": "roboshop-dev-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf34dfacd74cd95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "sg-018f8a7627d5520d4",
            "region": "us-east-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121973526213:security-group/sg-0bb7771cd8563303a",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb7771cd8563303a",
            "ingress": [],
            "name": "roboshop-{var.environment}-mysql",
            "name_prefix": "",
            "owner_id": "121973526213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop-dev-mysql"
            },
            "tags_all": {
              "Name": "roboshop-dev-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf34dfacd74cd95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "sg-0bb7771cd8563303a",
            "region": "us-east-1"
          }
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:121973526213:security-group/sg-0444620812f820476",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0444620812f820476",
            "ingress": [],
            "name": "roboshop-{var.environment}-rabbitmq",
            "name_prefix": "",
            "owner_id": "121973526213",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop-dev-rabbitmq"
            },
            "tags_all": {
              "Name": "roboshop-dev-rabbitmq"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf34dfacd74cd95"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "121973526213",
            "id": "sg-0444620812f820476",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}